# cpp_project_layout

./: README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/module_1/: CMakeLists.txt
src/module_1/include/: module_1.hpp
src/module_1/src/: module_1.cpp
src/module_2/: CMakeLists.txt
src/module_2/include/: module_2.hpp
src/module_2/src/: module_2.cpp
